--- a/style.css
+++ b/style.css
@@ -14,12 +14,16 @@ body{
     background-color: #052e62;
     color: #eeeee4;
     padding: 1vw;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 header h1{
     background-color: #052e62;
     color: #eeeee4;
-    font-size: 8vw;
+    font-size: 7vw;
     text-align: center;
     padding: 0;
     margin: 0;
@@ -81,4 +85,21 @@ nav a{
     text-decoration: none;
     background-color: inherit;
     color: inherit;
+}
+img{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    display: block;
+}
+p{
+    font-size: 1.25em;
+    color: #eeeee4;
+    background-color: #052e62;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
