--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ body{
     margin-right: auto;
     
 }
+
 header h1{
     background-color: #052e62;
     color: #eeeee4;
-    font-size: 7vw;
+    font-size: 8vw;
     text-align: center;
     padding: 0;
     margin: 0;
@@ -31,18 +32,18 @@ header h1{
 header h2{
     background-color: #052e62;
     color: #eeeee4;
-    font-size: 2vw;
+    font-size: 3vw;
     text-align: center;
     padding: 0;
-    margin: 0;
+    margin: 0;   
 }
 nav{
     display: inline-block;
     width: 100%;
     background-color: #052e62;
     color: #eeeee4;
-    font-size: 2vw;
-    padding: 0.5vw;
+    font-size: 2rem;
+    padding: 0.5rem;
 }
 #menu{
     display: inline;
@@ -64,16 +65,16 @@ nav ul{
     margin-left: auto;
     margin-right: auto;
     padding: 0;
-    margin-top: 4vw;
-    margin-bottom: 2vw;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 nav li{
     background-color: inherit;
     color: inherit;
     display: inline;
     border-radius: 7px;
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-left: 3vw;
+    margin-right: 3vw;
     font-size: 3vw;
     padding: 5px;
 }
@@ -87,19 +88,57 @@ nav a{
     color: inherit;
 }
 img{
-    width: 90%;
+    max-width: 90%;
+    max-height: 600px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 0;
     display: block;
+    border-radius: 10px;
+}
+#text{
+    width: 90%;
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 p{
-    font-size: 1.25em;
+    font-size: 1.5rem;
     color: #eeeee4;
     background-color: #052e62;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+#imp{
+    color: white;
+    font-size: 2rem;
+}
+@media only screen and (max-width: 400px) {
+    header h1{
+        font-size: 2rem;
+    }
+    header h2{
+        font-size: .75rem;
+    }
+    nav li{
+        margin-left: .25rem;
+        margin-right: .25rem;
+        font-size: .75rem;
+    }
+}
+@media only screen and (min-width: 1200px) {
+    header h1{
+        font-size: 6rem;
+    }
+    header h2{
+        font-size: 2.25rem;
+    }
+    nav li{
+        margin-left: 2.25rem;
+        margin-right: 2.25rem;
+        font-size: 2.25rem;
+    }
 }
