--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
     
 }
 
@@ -31,6 +32,7 @@ header h1{
 }
 header h2{
     background-color: #052e62;
+    width: 100%;
     color: #eeeee4;
     font-size: 3vw;
     text-align: center;
@@ -104,17 +106,19 @@ img{
     margin-right: auto;
 }
 p{
-    font-size: 1.5rem;
-    color: #eeeee4;
-    background-color: #052e62;
-    width: 90%;
+    width: 100%;
+    background-color: inherit;
+    color: inherit;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
-    display: block;
 }
-#imp{
-    color: white;
-    font-size: 2rem;
+.update{
+    background-color: inherit;
+    color: inherit;
+    font-size: 5vw;
+    text-align: center;
+
 }
 @media only screen and (max-width: 400px) {
     header h1{
