--- a/style.css
+++ b/style.css
@@ -113,6 +113,11 @@ p{
     margin-left: auto;
     margin-right: auto;
 }
+#recipe{
+    width:fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
 .update{
     background-color: inherit;
     color: inherit;
