--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ nav li{
     color: inherit;
     display: inline;
     border-radius: 7px;
-    margin-left: 3vw;
-    margin-right: 3vw;
+    margin-left: 1%;
+    margin-right: 1%;
     font-size: 3vw;
     padding: 5px;
 }
@@ -117,6 +117,7 @@ p{
     width:fit-content;
     margin-left: auto;
     margin-right: auto;
+    font-size: 3vw;
 }
 .update{
     background-color: inherit;
@@ -132,10 +133,17 @@ p{
     header h2{
         font-size: .75rem;
     }
+    #recipe p{
+        font-size: 0.75rem;
+    }
     nav li{
-        margin-left: .25rem;
-        margin-right: .25rem;
+        margin-left: .1rem !important;
+        margin-right: .1rem !important;
         font-size: .75rem;
+    }
+    nav ul{
+        margin-left: .1rem;
+        margin-right: .1rem;
     }
 }
 @media only screen and (min-width: 1200px) {
