--- a/style.css
+++ b/style.css
@@ -118,6 +118,8 @@ p{
     margin-left: auto;
     margin-right: auto;
     font-size: 3vw;
+    align-content: center;
+    text-align: center;
 }
 .update{
     background-color: inherit;
