might need to revert this

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ p{
     font-size: 3vw;
     align-content: center;
     text-align: center;
+    max-width: 1400px;
 }
 .update{
     background-color: inherit;
@@ -138,6 +139,9 @@ p{
     #recipe p{
         font-size: 0.75rem;
     }
+    #recipe ul{
+        list-style-type: none;
+    }
     nav li{
         margin-left: .1rem !important;
         margin-right: .1rem !important;
@@ -146,6 +150,7 @@ p{
     nav ul{
         margin-left: .1rem;
         margin-right: .1rem;
+        list-style-type: none;
     }
 }
 @media only screen and (min-width: 1200px) {
@@ -159,5 +164,11 @@ p{
         margin-left: 2.25rem;
         margin-right: 2.25rem;
         font-size: 2.25rem;
+    }
+    #recipe ul{
+        list-style-type: none;
+    }
+    nav ul{
+        list-style-type: none;
     }
 }
