--- a/style.css
+++ b/style.css
@@ -179,15 +179,26 @@ ul ul{
     #recipe ul{
         list-style-type: none;
     }
+    nav{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        margin-left: 0;
+        margin-right: 0;
+    }
     nav li{
-        margin-left: .1rem !important;
-        margin-right: .1rem !important;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
         font-size: .75rem;
+        margin-left: 0;
+        margin-right: 0;
     }
     nav ul{
-        margin-left: .1rem;
-        margin-right: .1rem;
+        margin-left: 0;
+        margin-right: 0;
         list-style-type: none;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 @media only screen and (min-width: 1400px) {
